2002-12-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* lisp: gnuplot-mode updated to 0.5t.

2002-11-27  Johannes Zellner  <johannes@zellner.org>

	* src/gplt_x11.c: subtract 1 from plot->cmap->allocated
	in PaletteSetColor so that the resulting color index is
	always valid

2002-12-04  Ethan Merritt  <merritt@u.washington.edu>

        * docs/gnuplot.doc: Alphabetize and re-organize 'set style' options.
	  The layout could use more work to make the html and tex-derived
	  documentation come out right.
	* docs/doc2texi.el: Add gd.trm and jpeg.trm to the list of files
	  searched while generating documentation.
        * term/png.trm: Modify documentation/help tags to distinguish new
	  and old png drivers.
        * term/post.trm: Delete extraneous documentation/help tag.

2002-12-03  Ethan Merritt  <merritt@u.washington.edu>

        * term/gd.trm: Prevent buffer overflow on really long font names.

2002-12-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graphics.c(plot_filledcurves): Added forgotten points=0; after
	call to finish_filled_curve(). If fixes sequent drawing of closed curves
	from one data file.

2002-12-01  Ethan Merritt  <merritt@u.washington.edu>

        * term/cgm.trm: Tweak code so gcc3.2 does not complain about
	ill-defined behavior of a[i]=b[i++].

2002-11-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util3d.c (draw3d_line_unconditional): Removed the GP_INLINE
 	qualifier.  MSVC build would fail otherwise.
	
2002-11-27  Johannes Zellner  <johannes@zellner.org>

	* term/cgm.trm:
	- "plot w filledcurves" didn't use the correct line color
	- replaced a few assertions by "truncations" at term->xmax /
	  term->ymax

2002-11-26  Ethan Merritt  <merritt@u.washington.edu>

        * src/save.c src/set.c src/show.c src/unset.c src/tables.c
 	src/tables.h docs/gnuplot.doc: Change syntax from 'set missing
 	"<string>"' to 'set datafile missing "<string>"'. The old syntax
 	is still accepted.
